# bupkis

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: config.rs  main.rs  util.rs  view.rs
src/css/: style.css
src/js/: photo.js
src/templates/: album.hbs  photo.hbs
