[package]
name = "bupkis"
version = "0.1.1"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2018"
description = "A small static album generator"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/woodruffw/bupkis"

[package.metadata.release]
no-dev-version = true
disable-publish = true # handled by GitHub Actions

[dependencies]
anyhow = "1.0"
clap = "3.1.18"
env_logger = "0.9"
handlebars = "4.2"
image = "0.24"
indicatif = "0.16"
log = "0.4"
pulldown-cmark = "0.9"
rust-embed = "6.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
slug = "0.1.4"
threadpool = "1.8"
